@@ -5817,9 +5817,13 @@ here $p$ must be prime.
 \fun{GEN}{Flx_integ}{GEN z, ulong p},
 here $p$ must be prime.
 
-\fun{GEN}{Flx_translate1}{GEN P, ulong p} return $P(x+1)$
+\fun{GEN}{Flx_translate1}{GEN P, ulong p} return $P(x+1)$, $p$ must be prime.
+Asymptotically fast (quasi-linear in the degree of $P$).
 
-\fun{GEN}{Flx_diff1}{GEN P, ulong p} return $P(x+1)-P(x)$
+\fun{GEN}{Flx_translate1_basecase}{GEN P, ulong p} return $P(x+1)$, $p$
+need not be prime. Not asymptotically fast (quadratic in the degree of $P$).
+
+\fun{GEN}{Flx_diff1}{GEN P, ulong p} return $P(x+1)-P(x)$; $p$ must be prime.
 
 \fun{GEN}{Flx_digits}{GEN x, GEN B, ulong p} returns a vector of \kbd{Flx}
 $[c_0,\ldots,c_n]$ of degree less than the degree of $B$ and such that
